--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>My beautiful website</title>
     </head>
     <body>
-    
+        <h1>Welcome!</h1>
+        <p>This is the best website ever.</p>
     
     </body>
 
